--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,19 @@
             var top = (ev.clientY - (size/2));
             var left = (ev.clientX - (size/2));
             var color = '#990000';
-            var square = $('<div style="' +
+    	    function writeSquareData(left, top, color, square) {
+    	    	squareList.push({
+    	    		x: left,
+    	    		y: top,
+    	    		color: color,
+    	    		html: square
+    	    	});
+    	    	return squareList.once('value').then(function(snapshot) {
+    	    		var squareKey = snapshot.val().squareId;
+    	    	})
+    	    };
+            //squareId is undefined here bc we havent written to the DB
+            var square = $('<div id="' +squareList.squareId +'" style="' +
                            'position: absolute; ' +
                            'width: '+ size + 'px; ' +
                            'height: ' + size + 'px; ' +
@@ -45,19 +57,9 @@
                            'left:' + left + 'px;"' +
                            '></div>');
 
-    	    function writeSquareData(left, top, color, square) {
-    	    	squareList.push({
-    	    		x: left,
-    	    		y: top,
-    	    		color: color,
-    	    		html: square
-    	    	});
-    	    };
-
             // if (!square at (top,left)):
     	    //    write to DB
             writeSquareData(left, top, color, square);
-            // console.log(square.)
             //    and add a square to the screen
             //// console.log(square.get(0));
             $('body').append(square);
@@ -71,20 +73,15 @@
         var clickArea = document.getElementById('mainBody');
         clickArea.addEventListener('click', handleClick);
 
-        squareList.on('value', function(snapshot) {
-        	console.log(snapshot.val());
-        	// for (var s=0; s < snapshot.val(); s++) {
-        	// 	var newsquare = $('<div style="' +
-         //                   'position: absolute; ' +
-         //                   'width: '+ size + 'px; ' +
-         //                   'height: ' + size + 'px; ' +
-         //                   'background-color: ' + s.color + '; ' +
-         //                   'top:' + s.top + 'px;' +
-         //                   'left:' + s.left + 'px;"' +
-         //                   '></div>');
-        	// 	$('body').append(newsquare);
-        	// }
-        });
+        //draw all squares in the DB
+		squareList.on('value', function(snapshot) {
+			$.each(snapshot.val(), function(squareId, squareData) {
+				$.each(squareData, function(index, value) {
+					console.log(value);
+				});
+			});
+		});
+
 
     });
         
